# sicrib

./: .gitignore  color_helper.py  fx_config.json  fx_config.p  fx_config_tabbed.json  main.py  requirements.txt  room.py  write_fx_config.py
config-to-serial/: main.py  spooky.py
config_to_serial/: main.py
kinect-sensor/: main.py  output.avi
led-controller/: circular_list.py  color_helper.py  compass.py  config.py  edge.py  main.py  room.py
pico/: CMakeLists.txt  sicrib_pico.cpp
share/: cycle_doorway_states.py  doorway_states.json  fx_config.json  write_doorway_states.py  write_fx_config.py
teensy/: Room.cpp  main.ino  main.ino.TEENSY40.hex  teensy.ino
teensy/doodling_around/: doodling_around.ino
teensy/listening_to_pico/: listening_to_pico.ino
web-server/: app.py  forms.py
web-server/templates/: audio.html  base.html  doorway_tracker.html  epilepsy.html  huecolorspan.html  index.html  rave.html  static.html
